# thz-nerve-fiber

./: .gitignore  CLAUDE.md  REPORT.md  SESSION.md  context.md  pyproject.toml
docs/: setup-windows.md
docs/adr/: 0001-python-script-as-source-of-truth.md  0002-windows-native-execution.md  0003-yaml-sweep-configs.md  0004-hdf5-storage-with-manifest.md
docs/references/: Thesis_final.txt  paper_1.txt  paper_2.txt  paper_3.txt
experiments/: example.yaml  sim10_field_isosurfaces.py  sim11_freq_waterfall.py  sim12_node_length_3d.py  sim13_resonance_contrast_3d.py  sim14_dispersion_3d.py  sim15_freq_nodelen_surface.py  sim16_mesh_convergence_3d.py  sim17_power_dissipation.py  sim18_e_parallel_fibre.py  sim19_lorentzian_fit.py  sim1_freq_sweep.py  sim1_replot.py  sim20_polarisation_compare.py  sim21_fibre_along_x.py  sim22_dense_peaks.py  sim23_power_dissipation_sigma100.py  sim24_mode_identification.py  sim25_field_at_both_peaks.py  sim26_convergence_both_peaks.py  sim2_replot.py  sim2_sigma_sweep.py  sim3_node_length.py  sim4_dispersion.py  sim5_geometry_viz.py  sim6_grating.py  sim7_wavelength_scales.py  sim8_periodic_array_3d.py  sim9_3d_field_at_resonance.py
figures/: _template.py
scripts/: geometry_smoke.py  materials_smoke.py  run.py  smoke_test.py  study_smoke.py
src/thznerve/: __init__.py
src/thznerve/io/: hdf5.py  manifest.py  provenance.py
src/thznerve/model/: geometry.py  materials.py  mesh.py  study.py
src/thznerve/plots/: style.py
src/thznerve/sweep/: expand.py  schema.py
tests/: test_io.py  test_material_encoding.py  test_materials.py
